--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
+media/
+static/
 
 # Flask stuff:
 instance/
@@ -105,3 +107,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
