--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,9 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+venv/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
