--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-django>=2.0.7
-django-ckeditor
-django-mathfilters
-Pillow
+django==3.1.4
+django-ckeditor==6.0.0
+django-mathfilters==1.0.0
+Pillow==8.0.1
+psycopg2==2.8.6
+django-storages==1.11
+boto3==1.16.40
